# qgate-shots-filter

./: .gitignore  .secrets.json.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  run_one.py
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md
examples/: basic_conditioning.py  dynamic_threshold.py  generate_config.py  multi_rate_monitor.py  qiskit_local.py  trajectory_filter_basic.py
patent_appendix/: results.csv
qiskit_experiment/: README.md  circuits.py  conditioning.py  plots.py
simulations/bias_study/: run_bias_study.py
simulations/grover_tsvf/: README.md  run_grover_tsvf_experiment.py
simulations/ibm_hardware/: README.md  __init__.py  conditioning.py  run_galton_experiment.py  run_ibm_experiment.py  run_log.json  sweep.py
simulations/paper_experiments/: run_paper_experiments.py  run_train_test_validation.py
simulations/qaoa_tsvf/: README.md  run_qaoa_tsvf_experiment.py
simulations/qgate_os/: test_ibm_cloud_api.py  validate_os_e2e.py
simulations/qpe_tsvf/: README.md  run_qpe_tsvf_experiment.py
simulations/qutip_sims/configs/: followup_config.json  high_noise_config.json
simulations/qutip_sims/scripts/: analyze_compare.py  run_followup.py  run_high_noise.py  run_high_noise_sweep.py  run_incremental.py  run_multifreq.py  run_scaling_sweep.py  run_sweep.py
simulations/tfim_127q/: README.md  run_tfim_127q.py  run_tfim_dryrun.py
simulations/vns_compatibility/: run_vns_experiment.py
simulations/vqe_tsvf/: README.md  run_vqe_tsvf_experiment.py
src/: plot.py  sim.py  utils.py
(+3 files in other folders)
